--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  flutter_spinkit: ^4.1.0
 
 dev_dependencies:
   flutter_test:
@@ -43,7 +44,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
   - assets/
-  - images/ashish.jpg
+  - images/
 
   fonts:
   - family: ProductSansRegular
